fix wrong fonts and partials import in scss

--- a/src/scss/partials/_fonts.scss
+++ b/src/scss/partials/_fonts.scss
@@ -7,12 +7,12 @@
 // Import font BerkshireSwash
 @font-face {
     font-family: "BerkshireSwash";
-    src: url("../fonts/BerkhireSwash-Regular.ttf") format("truetype");
+    src: url("../fonts/BerkshireSwash-Regular.ttf") format("truetype");
 }
 
 @font-face {
     font-family: "Comfortaa";
-    src: url("Comfortaa-Regular.ttf") format("truetype");
+    src: url("../fonts/Comfortaa-Regular.ttf") format("truetype");
 }
 
 $Didone: 'AnticDidone', 'arial', 'sans-serif';
